--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- header start -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixd-top">
             <div class="container">
               <a class="navbar-brand" href="#"> <img src="images/logo.png" alt="">
                 </a>
@@ -24,13 +24,13 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Shoes</a>
+                    <a class="nav-link" href="#shoes">Shoes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Backpack</a>
+                    <a class="nav-link" href="#Backpack">Backpack</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Subscribe</a>
+                    <a class="nav-link" href="#Subscribe">Subscribe</a>
                   </li>
                 </ul>
               </div>
@@ -116,10 +116,107 @@
                   </div>
                 </div>
         </section>
+
+        <!-- catagoris 2 -->
+
+        <section class="ms-5 me-5 conatiner"id="shoes">
+            <h2 class="ms-3">Shoes</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                  <div class="card shadow-lg border-0 h-100">
+                    <img src="images//shoes/shoe-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Supply 350</h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                    </div>
+                    <div class="ms-3 my-3">
+                        <button class="btn btn-warning">Buy Now</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card shadow-lg border-0 h-100">
+                    <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Nike 360</h5>
+                      <p class="card-text">This card has supporting text below as a natural lead-in to additional content</p>
+                    </div>
+                    <div class="ms-3 my-3">
+                        <button class="btn btn-warning">Buy Now</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card shadow-lg border-0 h-100">
+                    <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Red Airmax</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional.</p>
+                    </div>
+                    <div class="ms-3 my-3">
+                        <button class="btn btn-warning">Buy Now</button>
+                    </div>
+                  </div>
+                </div>
+              </div>  
+        </section>
+        <!-- bags section -->
+        <section class="ms-5 me-5 my-5 conatiner"id="Backpack">
+            <h2 class="ms-3">Backpack</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                  <div class="card shadow-lg border-0 h-100">
+                    <img src="images//bags/bag-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Red bag</h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                    </div>
+                    <div class="ms-3 my-3">
+                        <button class="btn btn-warning">Buy Now</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card shadow-lg border-0 h-100">
+                    <img src="images//bags/bag-2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Blue bag</h5>
+                      <p class="card-text">This card has supporting text below as a natural lead-in to additional content</p>
+                    </div>
+                    <div class="ms-3 my-3">
+                        <button class="btn btn-warning">Buy Now</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card shadow-lg border-0 h-100">
+                    <img src="images//bags/bag-3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Black bag</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional.</p>
+                    </div>
+                    <div class="ms-3 my-3">
+                        <button class="btn btn-warning">Buy Now</button>
+                    </div>
+                  </div>
+                </div>
+              </div>  
+        </section>
+
+        <!-- subscribe -->
+        <section style="height: 300px;" class="d-flex justify-content-center align-items-center rounded-3 bg-info container" id="Subscribe">
+            <div>
+              <h1>LET'S STAY IN TOUCH</h1>  
+              <P>Get updates on sales, specials and more</P>
+              <input type="text" placeholder="email">
+              <br>
+              <button class="btn btn-warning">SUBMIT</button>
+            </div>  
+        </section>
     </main>
 
-    <footer>
-
+    <footer class="mt-5 text-center">
+         <p><small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria</small></p>   
     </footer>
 
 <!-- script bootstrap stylesheet -->
